--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -4,7 +4,8 @@
       <app-form-panel></app-form-panel>
     </p-card>
   </div>
-  <div class="field col-12">
+  <div class="field col-12 text-version">
+    <i class="pi pi-info-circle" pTooltip="{{version}}"></i>
     <app-editor-panel></app-editor-panel>
   </div>
 </div>
