--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,9 @@
 body {
   background-color: dimgray;
 }
+.p-inputtext{
+  font-size: .8rem !important;
+}
+.p-component{
+  font-size: .8rem !important;
+}
