--- a/src/app/panel/form-panel/form-panel.component.html
+++ b/src/app/panel/form-panel/form-panel.component.html
@@ -6,13 +6,13 @@
       <label for="businessPicker">Empresa</label>
     </span>
   </div>
-  <div class="field col-3">
+  <div class="field col-2">
     <span class="p-float-label">
       <p-dropdown [options]="accounts" [(ngModel)]="appService.formData.bank" optionLabel="bank" inputId="bankPicker"></p-dropdown>
       <label for="bankPicker">Banco</label>
     </span>
   </div>
-  <div class="field col-2">
+  <div class="field col-3">
     <span class="p-float-label">
       <input type="text" pInputText [(ngModel)]="appService.formData.bank.account" disabled/>
       <label for="bankPicker">Cuenta</label>
@@ -21,14 +21,14 @@
 
   <div class="field col-2">
     <span class="p-float-label">
-      <p-calendar [(ngModel)]="appService.formData.date" dateFormat="dd/mm/yy" inputId="yearpicker"></p-calendar>
-      <label for="yearpicker">Fecha Reporte</label>
+      <p-calendar [(ngModel)]="appService.formData.date" dateFormat="dd/mm/yy" inputId="yearpicker" disabled></p-calendar>
+      <label for="yearpicker">Fecha de Reporte</label>
     </span>
   </div>
   <div class="field col-2">
     <span class="p-float-label">
-      <p-calendar [(ngModel)]="appService.formData.time" [timeOnly]="true" [hourFormat]="'12'" inputId="monthpicker"></p-calendar>
-      <label for="monthpicker">Hora Reporte</label>
+      <p-calendar [(ngModel)]="appService.formData.time" [timeOnly]="true" [hourFormat]="'12'" inputId="monthpicker" disabled></p-calendar>
+      <label for="monthpicker">Hora de Reporte</label>
     </span>
   </div>
 </div>
