--- a/src/app/panel/panel.component.scss
+++ b/src/app/panel/panel.component.scss
@@ -1,8 +1,6 @@
 .text-version {
-  position: absolute;
+  // position: absolute;
   color: gray;
   font-size: .8rem;
   text-align: end;
-  margin-top: 1px;
-  padding-right: 10px;
 }
